# g-account-manager

./: .gitignore  2fa_generator.py  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
src/: __init__.py
src/config/: __init__.py  constants.py  settings.py  translations.py
src/models/: __init__.py  account.py  app_state.py  group.py
src/services/: __init__.py  account_service.py  archive_service.py  backup_service.py  data_service.py  group_service.py  import_service.py  library_service.py  time_service.py  totp_service.py
src/ui/: __init__.py  icons.py  main_window.py  styles.py  theme.py
src/ui/dialogs/: __init__.py  account_dialog.py  duplicate_dialog.py  import_dialog.py  library_dialog.py  tag_editor_dialog.py
src/ui/widgets/: __init__.py  drag_handle.py  draggable_list.py  toast.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_account_service.py  test_data_service.py  test_import_service.py  test_totp_service.py
